manifests/argocd/base/istio-virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: argocd
    match:
    - uri:
        prefix: "/argocd"
    rewrite:
       uri: "/argocd"
    route:
    - destination:
        port:
          number: 80
        host: argo-cd-argocd-server.argocd.svc.cluster.local
